# openvino-model-division-and-simple-custom-layer

./: CMakeLists.txt  README.md  build.bat  build.sh  convert-divide-skip-conv.bat  convert-divide-skip.sh  convert-divide.bat  convert-divide.sh  convert-normal.bat  convert-normal.sh  draw-and-infer-div.py  draw-and-infer-skip-cpp.py  draw-and-infer.py  inference-div.py  inference-skip-cpp.py  inference-skip-python.py  inference.py  myLayers.cpp  myLayers_py.py  nptest.py  requirements.txt  training.py
